--- a/yml/06_install_master_proxy.yml
+++ b/yml/06_install_master_proxy.yml
@@ -36,14 +36,14 @@
 
     - name: 将nginx添加到系统自启动服务中
       copy:
-        src: ./packages/lib/systemd/system/nginx.service
+        src: ../packages/lib/systemd/system/nginx.service
         dest: /usr/lib/systemd/system/nginx.service
         mode: 0644
 
     - name: 编辑nginx配置文件，非注释的第一行，增加了加载ngx_stream_module.so模块
       # nginx.conf 非注释的第一行，需要加载load_module /usr/local/nginx/modules/ngx_stream_module.so;
       copy:
-        src: packages/etc/nginx/nginx.conf
+        src: ../packages/etc/nginx/nginx.conf
         dest: /etc/nginx/nginx.conf
 
     - name: 使用nginx -t命令检查参数
@@ -57,7 +57,7 @@
 
     - name: 编辑keepalived检查端口脚本
       copy:
-        src: ./packages/etc/keepalived/check_port.sh
+        src: ../packages/etc/keepalived/check_port.sh
         dest: /etc/keepalived/check_port.sh
         mode: 0755
 
@@ -66,7 +66,7 @@
   tasks:
     - name: 编辑keepalived配置文件
       copy:
-        src: packages/etc/keepalived/keepalived.conf_master
+        src: ../packages/etc/keepalived/keepalived.conf_master
         dest: /etc/keepalived/keepalived.conf
         mode: 0644
 
@@ -76,7 +76,7 @@
     - name: 编辑keepalived配置文件
       copy:
         # nopreempt：非抢占式，避免因为网络抖动导致节点漂移，当主节点恢复正常以后，vip再次回到主节点
-        src: packages/etc/keepalived/keepalived.conf_child
+        src: ../packages/etc/keepalived/keepalived.conf_child
         dest: /etc/keepalived/keepalived.conf
         mode: 0644
 
