--- a/yml/06_install_master_proxy.yml
+++ b/yml/06_install_master_proxy.yml
@@ -1,5 +1,6 @@
 ---
 - hosts: nginx
+  gather_facts: no
   user: root
   tasks:
     - name: 创建src源码包存放目录
@@ -17,7 +18,7 @@
     - name: 解压nginx源码包
       shell: tar xf /opt/src/nginx-1.20.1.tar.gz -C /opt
 
-    - name: 下载编译安装工具包
+    - name: 下载gcc等编译安装工具包
       shell: yum install -y install gcc pcre pcre-devel zlib zlib-devel openssl openssl-devel
 
     - name: 配置nginx编译使用的模块
@@ -25,12 +26,12 @@
         cmd: ./configure --sbin-path=/usr/local/sbin --conf-path=/etc/nginx/nginx.conf --error-log-path=/var/log/nginx/error.log --http-log-path=/var/log/nginx/access.log --pid-path=/var/run/nginx.pid --user=nginx --group=nginx --with-http_gzip_static_module --with-stream=dynamic
         chdir: /opt/nginx-1.20.1
 
-    - name: 编译安装
+    - name: 编译安装nginx
       shell:
         cmd: make && make install
         chdir: /opt/nginx-1.20.1
 
-    - name: 制作软链接
+    - name: 制作nginx软链接
       shell: ln -s /usr/local/sbin/nginx /usr/bin/nginx
       ignore_errors: yes
 
@@ -62,6 +63,7 @@
         mode: 0755
 
 - hosts: '11'
+  gather_facts: no
   user: root
   tasks:
     - name: 编辑keepalived配置文件
@@ -71,6 +73,7 @@
         mode: 0644
 
 - hosts: '12'
+  gather_facts: no
   user: root
   tasks:
     - name: 编辑keepalived配置文件
@@ -81,6 +84,7 @@
         mode: 0644
 
 - hosts: nginx
+  gather_facts: no
   user: root
   tasks:
     - name: 设置keepalived开机自启动
