--- a/yml/07_install_kube_related.yml
+++ b/yml/07_install_kube_related.yml
@@ -1,5 +1,6 @@
 ---
 - hosts: k8s
+  gather_facts: no
   user: root
   tasks:
     - name: 创建kube-controller-manager.sh脚本
@@ -32,6 +33,7 @@
         mode: 0644
 
 - hosts: '21'
+  gather_facts: no
   user: root
   tasks:
     - name: 编辑kube-conntroller-manager.ini配置文件，和主机IP地址保持一致
@@ -47,6 +49,7 @@
         line: '[program:kube-scheduler-7-21]'
 
 - hosts: '22'
+  gather_facts: no
   user: root
   tasks:
     - name: 编辑ini配置文件，和主机IP地址保持一致
@@ -62,16 +65,21 @@
         line: '[program:kube-scheduler-7-22]'
 
 - hosts: k8s
+  gather_facts: no
   user: root
   tasks:
-    - name: 检查supervisor配置
+    - name: 使用supervisorctl启动kube scheduler和controller manager
       shell: supervisorctl update
 
-    - name: 等待supervisor启动，需要等待20秒左右
-      pause: seconds=20
+#    - name: 等待supervisor启动，需要等待20秒左右
+#      pause: seconds=20
 
     - name: 设置kubectl软链接
       shell: ln -s /opt/kubernetes/server/bin/kubectl /usr/bin/kubectl
 
     - name: 使用kubectl检查集群健康状态
       shell: kubectl get cs
+      register: std_out
+
+    - name: 查看集群健康状态输出
+      debug: msg={{ std_out.stdout_lines }}
