--- a/yml/11_install_flannel.yml
+++ b/yml/11_install_flannel.yml
@@ -126,3 +126,48 @@
     - name: 查看flanneld.stdout.log输出结果
       debug: msg={{ std_out.stdout_lines }}
 
+    - name: 安装iptables-services
+      shell: yum install iptables-services -y
+
+    - name: 启动iptables并设为开机自启动
+      shell: systemctl start iptables && systemctl enable iptables
+
+    - name: 查看已有的postrouting规则
+      shell: iptables-save | grep -i postrouting
+      register: std_out
+
+    - name: 查看已有的postrouting规则输出结果
+      debug: msg={{ std_out.stdout_lines }}
+
+- hosts: '21'
+  gather_facts: no
+  user: root
+    - name: 取消原有iptables转发规则
+      # -s source -D(Delete)
+      shell: iptables -t nat -D POSTROUTING -s 172.7.21.0/24 ! -o docker0 -j MASQUERADE
+
+    - name: 设置iptables转发规则，将出网网卡设置为docker0
+      # -s source -I（Insert）-d destination，
+      # 翻译下来从172.7.21.0/24出去的，不是到172.7.0.0/16，不是从docker0网卡转发的，才做SNAT转换
+      shell: iptables -t nat -I POSTROUTING -s 172.7.21.0/24 ! -d 172.7.0.0/16 ! -o docker0 -j MASQUERADE
+
+- hosts: '22'
+  gather_facts: no
+  user: root
+    - name: 取消原有iptables转发规则
+      shell: iptables -t nat -D POSTROUTING -s 172.7.22.0/24 ! -o docker0 -j MASQUERADE
+
+    - name: 设置iptables转发规则，将出网网卡设置为docker0
+      shell: iptables -t nat -I POSTROUTING -s 172.7.22.0/24 ! -d 172.7.0.0/16 ! -o docker0 -j MASQUERADE
+
+
+- hosts: flannel
+  gather_facts: no
+  user: root
+  tasks:
+    - name: 保存iptables规则到/etc/sysconfig/iptables
+      shell: iptables-save > /etc/sysconfig/iptables
+
+    - name: 删除掉可能会影响pod通信的规则
+      shell: echo $(iptables-save | grep -i reject) | xargs iptables -t filter -D
+      ignore_errors: yes
