--- a/packages/etc/supervisord.d/kube-apiserver.ini
+++ b/packages/etc/supervisord.d/kube-apiserver.ini
@@ -1,4 +1,4 @@
-[program:kube-apiserver-7-21]
+[program:apiserver]
 command=/opt/kubernetes/server/bin/kube-apiserver.sh            ; the program (relative uses PATH, can take args)
 numprocs=1                                                      ; number of processes copies to start (def 1)
 directory=/opt/kubernetes/server/bin                            ; directory to cwd to before exec (def no cwd)
