--- a/packages/etc/supervisord.d/etcd-server.ini
+++ b/packages/etc/supervisord.d/etcd-server.ini
@@ -1,4 +1,4 @@
-[program:etcd-server-7-12]
+[program:etcd-server]
 command=/opt/etcd/etcd-server-startup.sh                        ; the program (relative uses PATH, can take args)
 numprocs=1                                                      ; number of processes copies to start (def 1)
 directory=/opt/etcd                                             ; directory to cwd to before exec (def no cwd)
