--- a/packages/etc/supervisord.d/kube-conntroller-manager.ini
+++ b/packages/etc/supervisord.d/kube-conntroller-manager.ini
@@ -1,4 +1,4 @@
-[program:kube-controller-manager-7-xx]
+[program:kube-controller-manager]
 command=/opt/kubernetes/server/bin/kube-controller-manager.sh                     ; the program (relative uses PATH, can take args)
 numprocs=1                                                                        ; number of processes copies to start (def 1)
 directory=/opt/kubernetes/server/bin                                              ; directory to cwd to before exec (def no cwd)
