--- a/packages/etc/supervisord.d/kube-kubelet.ini
+++ b/packages/etc/supervisord.d/kube-kubelet.ini
@@ -1,4 +1,4 @@
-[program:kube-kubelet-7-xx]
+[program:kubelet]
 command=/opt/kubernetes/server/bin/kubelet.sh     ; the program (relative uses PATH, can take args)
 numprocs=1                                        ; number of processes copies to start (def 1)
 directory=/opt/kubernetes/server/bin              ; directory to cwd to before exec (def no cwd)
