--- a/packages/etc/supervisord.d/kube-proxy.ini
+++ b/packages/etc/supervisord.d/kube-proxy.ini
@@ -1,4 +1,4 @@
-[program:kube-proxy-7-xx]
+[program:kube-proxy]
 command=/opt/kubernetes/server/bin/kube-proxy.sh                     ; the program (relative uses PATH, can take args)
 numprocs=1                                                           ; number of processes copies to start (def 1)
 directory=/opt/kubernetes/server/bin                                 ; directory to cwd to before exec (def no cwd)
