--- a/packages/etc/supervisord.d/kube-scheduler.ini
+++ b/packages/etc/supervisord.d/kube-scheduler.ini
@@ -1,4 +1,4 @@
-[program:kube-scheduler-7-xx]
+[program:kube-scheduler]
 command=/opt/kubernetes/server/bin/kube-scheduler.sh                     ; the program (relative uses PATH, can take args)
 numprocs=1                                                               ; number of processes copies to start (def 1)
 directory=/opt/kubernetes/server/bin                                     ; directory to cwd to before exec (def no cwd)
