--- a/yml/06_install_master_proxy.yml
+++ b/yml/06_install_master_proxy.yml
@@ -23,7 +23,7 @@
 
     - name: 配置nginx编译使用的模块
       shell:
-        cmd: ./configure --sbin-path=/usr/local/sbin --conf-path=/etc/nginx/nginx.conf --error-log-path=/var/log/nginx/error.log --http-log-path=/var/log/nginx/access.log --pid-path=/var/run/nginx.pid --user=nginx --group=nginx --with-http_gzip_static_module --with-stream=dynamic
+        cmd: ./configure --sbin-path=/usr/local/sbin --conf-path=/etc/nginx/nginx.conf --error-log-path=/var/log/nginx/error.log --http-log-path=/var/log/nginx/access.log --pid-path=/var/run/nginx.pid --user=nginx --group=nginx --with-http_gzip_static_module --with-http_stub_status_module --with-http_ssl_module --with-stream=dynamic
         chdir: /opt/nginx-1.20.1
 
     - name: 编译安装nginx
